--- a/Mooc2/style.css
+++ b/Mooc2/style.css
@@ -120,3 +120,15 @@ a {
   padding-top: 15px;
   background-color: rgba(114, 122, 142, 0.4);
 }
+
+/* Add */
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(2);
+  z-index: 1;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+  border: 4px solid white;
+  background-color: white;
+}
